<FIX> App.css min-width caused overflow

--- a/marketing-app/src/App.css
+++ b/marketing-app/src/App.css
@@ -1,7 +1,6 @@
 .app {
     background-color: var(--hex-primary);
     min-height: 100vh;
-    min-width: 100vw;
 }
 h1, h2, h3, h4, h5, p {
     color: var(--text);
